tests/bad/match_upon_path.lens
match(entry) upon (e.bar.foo){
    "(?<bar>\d+)"
}
